--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Privacy Policy - IBBL MTDR Profit Calculator</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.8;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px 40px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+    h1, h2 {
+      color: #004080;
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    p {
+      margin: 10px 0;
+    }
+    footer {
+      margin-top: 30px;
+      font-size: 14px;
+      color: #777;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> [Insert Date]</p>
+
+    <h2>Introduction</h2>
+    <p>
+      This Privacy Policy explains how the <strong>IBBL MTDR Profit Calculator</strong> app ("we", "our", or "us") handles user information. We respect your privacy and are committed to protecting any data you may share with us. By using the app, you agree to the practices described in this policy.
+    </p>
+
+    <h2>1. Information We Do Not Collect</h2>
+    <p>
+      We do <strong>not</strong> collect, store, or share any personally identifiable information (PII) from users of this app. The app is designed purely to perform profit calculations based on user input, without transmitting any data to our servers or third parties.
+    </p>
+
+    <h2>2. User Input</h2>
+    <p>
+      All calculations are done locally on your device. The information you enter—such as investment amount, duration, and profit rate—is <strong>not saved</strong> or <strong>transmitted</strong>. It is used only for instant, on-device calculations.
+    </p>
+
+    <h2>3. No Internet Access Required</h2>
+    <p>
+      This app does not require an internet connection to function. It operates entirely offline, ensuring that your inputs remain private and secure.
+    </p>
+
+    <h2>4. Third-Party Services</h2>
+    <p>
+      The app does not use or integrate with any third-party analytics, advertising networks, or external services that could collect user data.
+    </p>
+
+    <h2>5. Children’s Privacy</h2>
+    <p>
+      As we do not collect any personal data, this app is safe for use by individuals of all ages, including children under 13. We comply with applicable data protection laws regarding children’s privacy.
+    </p>
+
+    <h2>6. Security</h2>
+    <p>
+      Even though we do not store or transmit any data, we take reasonable precautions to ensure the app is free of vulnerabilities that could compromise device security.
+    </p>
+
+    <h2>7. Changes to This Policy</h2>
+    <p>
+      We may update this Privacy Policy from time to time. Changes will be reflected on this page with a revised "Effective Date." Continued use of the app after such changes indicates your acceptance of the new policy.
+    </p>
+
+    <h2>8. Contact Us</h2>
+    <p>
+      If you have any questions or concerns about this Privacy Policy or the app, you may contact us at:<br>
+      <strong>Email:</strong> [Insert contact email]
+    </p>
+
+    <footer>
+      &copy; 2025 IBBL MTDR Profit Calculator. All rights reserved.
+    </footer>
+  </div>
+</body>
+</html>
 
