--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p><strong>Effective Date:</strong> [Insert Date]</p>
+    <p><strong>Effective Date:</strong> 29 Jul,2025</p>
 
     <h2>Introduction</h2>
     <p>
@@ -86,7 +86,7 @@
     <h2>8. Contact Us</h2>
     <p>
       If you have any questions or concerns about this Privacy Policy or the app, you may contact us at:<br>
-      <strong>Email:</strong> [Insert contact email]
+      <strong>Email:</strong> support@bdjobentry.com
     </p>
 
     <footer>
@@ -95,4 +95,3 @@
   </div>
 </body>
 </html>
-
